# Project-FitOS

./: .cproject  .mxproject  .project  README.md  RTOS_V1.0 Debug.launch  RTOS_V1.0.ioc
Core/: lv_conf.h
Core/App/Hardware/: fonts.c  fonts.h  gc9a01.c  gc9a01.h  hardware_init.h
Core/App/lvglApplication/: CMakeLists.txt  filelist.txt  ui.c  ui.h
Core/App/lvglApplication/components/: ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_image2.c  ui_comp_image2.h
Core/App/lvglApplication/images/: ui_img_1117480529.c  ui_img_pastel_purple_png.c  ui_img_ring_png.c  ui_img_watch_hour_modern_png.c  ui_img_watch_min_modern_png.c  ui_img_watch_sec_modern_png.c
Core/App/lvglApplication/screens/: ui_Screen1.c
Core/Inc/: FreeRTOSConfig.h  main.h  stm32l4xx_it.h
Core/Src/: freertos.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c
Debug/: RTOS_V1.0.map  makefile  objects.list  sources.mk
Debug/Core/App/Hardware/: fonts.d  gc9a01.cyclo  gc9a01.d  gc9a01.su  hardware_init.d  subdir.mk
Debug/Core/App/lvglApplication/: subdir.mk  ui.cyclo  ui.d  ui.su  ui_helpers.d  ui_helpers.su
Debug/Core/App/lvglApplication/components/: subdir.mk  ui_comp.cyclo  ui_comp.d  ui_comp.su  ui_comp_hook.cyclo  ui_comp_hook.d  ui_comp_hook.su  ui_comp_image2.cyclo  ui_comp_image2.d  ui_comp_image2.su
Debug/Core/App/lvglApplication/images/: subdir.mk  (+6 more)
Debug/Core/Src/: freertos.cyclo  freertos.su  main.cyclo  main.d  main.su  stm32l4xx_hal_msp.cyclo  stm32l4xx_hal_msp.su  stm32l4xx_it.cyclo  subdir.mk
Debug/Drivers/STM32L4xx_HAL_Driver/Src/: subdir.mk
(+297 files in other folders)
